# scouting_8033

./: Cargo.toml  README.md
migrations/2022-03-31-184448_shooting_data/: down.sql  up.sql
rustplotlib/: Cargo.toml
src/: main.rs  models.rs  schema.rs
src/analysis/: accuracy.rs  climb.rs  mod.rs  points.rs  raw_data.rs
src/auth/: mod.rs
static/: form.html
templates/: data-listing.html
