[package]
name = "scouting_8033"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.6.0"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["sqlite"] }
diesel_derives = { version = "1.4.1", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
log = "0.4.16"
migrations_macros = "1.4.2"
pretty_env_logger = "0.4.0"
r2d2 = "0.8.9"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"
uuid = "0.8.2"
